@@ -8,8 +8,8 @@ import org.junit.Test;
 import javax.activation.MimeType;
 import javax.activation.MimeTypeParseException;
 import javax.mail.internet.AddressException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -20,20 +20,20 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertSame;
 
 public final class ItemTest {
-    private URL validLink;
+    private URI validLink;
     private String author;
     private Set<Category> categories;
     private UniqueId uniqueId;
     private Source source;
     private DateTime publishDate;
     private List<Enclosure> enclosures;
-    private URL otherLink;
+    private URI otherLink;
     private Item item;
 
     @Before
-    public void setup() throws MalformedURLException, MimeTypeParseException {
-        validLink = new URL("http://mircomacrelli.net");
-        otherLink = new URL("http://www.google.com");
+    public void setup() throws MimeTypeParseException, URISyntaxException {
+        validLink = new URI("http://mircomacrelli.net");
+        otherLink = new URI("http://www.google.com");
         author = "info@mircomacrelli.net";
         categories = new HashSet<>(1);
         categories.add(new Category(null, "web"));
@@ -131,7 +131,7 @@ public final class ItemTest {
 
     @Test
     public void equalsContract() {
-        EqualsVerifier.forClass(Item.class).withPrefabValues(URL.class, validLink, otherLink).verify();
+        EqualsVerifier.forClass(Item.class).withPrefabValues(URI.class, validLink, otherLink).verify();
     }
 
     @Test(expected = UnsupportedOperationException.class)
